136) kenrel: net: netfilter: bridge: don't leak skb in error paths.<br>
137) kernel: net: packet: read num_members once in packet_rcv_fanout().<br>
138) kernel: net: packet: avoid out of bounds read in round robin fanout.<br>
139) kernel: backport new ASIX AX88179/178A and Realtek RTL8152/8153 USB 3.0/2.0 Ethernet drivers.<br>
<br>
<br>
<b>3.4.x</b><br>
1) build_system: add new metal 7620a+7612ne internal pa/lna sd usb 16/128Mb sample.<br>
2) build_system: enable hotspot support for all devices (need test webui fixup and configure review).<br>
3) irqbalance: update to 04.08.2015 git version.<br>
4) coova-chilli: move to use xt_coova netfilter module instead of libpcap.<br>
5) kernel: tcp: fix slow start after idle vs TSO/GSO.<br>
6) kernel: ralink_mtd: sync MT7621/MT7628 SPI/NAND flash drivers with SDK 5.0.0.0.<br>
7) kernel: ralink_ppe: sync with 5.0.0.0 SDK.<br>
8) kernel: ralink_arch: sync with SDK 5.0.0.0.<br>
9) kernel: ralink_sdxc: fix MT7628 SDXC init.<br>
10) kernel: ralink_wifi: 7610: always set ldpc field to 0 in CAP_IE (7610 not support LDCP).<br>
11) kernel: ralink_wifi: 7610: fix calculate rx amdsu size.<br>
12) kernel: ralink_wifi: xxxx: fix mcs7 cap parse.<br>
13) kernel: igmp: inhibit reports for local multicast groups.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need fix ui for channel 5GHz select (allow 36-64 and 136—165 channels for RU AbandRegion=7).<br>
3) need add subchannel select for 5GHz module.<br>
4) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
7) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
<br>
<br>
<br>