@@ -1254,6 +1254,7 @@
 11) kernel: ralink_wifi: 7610: fix calculate rx amdsu size.<br>
 12) kernel: ralink_wifi: xxxx: fix mcs7 cap parse.<br>
 13) kernel: igmp: inhibit reports for local multicast groups.<br>
+14) kernel: ipv6: send NEWLINK on RA managed/otherconf changes.<br>
 <br>
 <br>
 <b>TODO:</b><br>
